# daffy

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.daffy  Dockerfile.scrooge  Justfile  README.md  pyproject.toml
src/daffy/: cli.py  config.py  parse.py  schema.py  shipper.py  sql.py  store.py  wrapper.py
src/scrooge/: cli.py  config.py  monitor.py  retention.py  server.py
tests/: conftest.py  test_cli.py  test_monitor.py  test_parse.py  test_retention.py  test_server.py  test_shipper.py  test_store.py  test_wrapper.py
